tests/method_simple_error.june
// error: can't find 'self' variable

struct Box {
    width: i64

    fun get_area() -> i64 {
        return .width * .width
    }
}

fun main() {
    let box = new Box(width: 10)

    println(box.get_area())
}